Allow for specification of environment variables
Update openapi.yaml to add get paths for environment
variables for each controoler, making it easier to
view local JSON files as OSCAL content.
