# src/main/java/com/easydynamics/oscalrestservice/api/ProfilesController.java
@@ -4,7 +4,6 @@ import io.swagger.v3.oas.annotations.Parameter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.env.Environment;
 import org.springframework.http.HttpStatus;
@@ -57,7 +56,7 @@ public class ProfilesController {
    *                         profile file
    * @return the oscal content of the local profile json file
    */
-  @GetMapping("/profile/env/{profileLocalJson}")
+  @GetMapping("/profiles/env/{profileLocalJson}")
   public ResponseEntity<String> findByLocalEnv(@Parameter @PathVariable String profileLocalJson) {
     String fileName = env.getProperty(profileLocalJson);
     if (fileName == null) {
